Add osb-core as submodule

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </parent>
 
     <modules>
+        <module>osb-core</module>
         <module>osb-backup-notification-service</module>
     </modules>
 
