Fix bug, add incremental id, adjust kafka properties

--- a/osb-backup-notification-service/src/main/resources/application.yml
+++ b/osb-backup-notification-service/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
         jaas:
           config: org.apache.kafka.common.security.plain.PlainLoginModule required username="admin" password="admin-secret";
   redis:
+    cluster:
+      nodes: localhost:6379
     host: localhost
-    port: 16379
-    password: admin-secret
+    port: 6379
