--- a/manifest.yml
+++ b/manifest.yml
@@ -10,7 +10,7 @@ applications:
     SPRING_APPLICATION_NAME: osb-evoila-test
     SPRING_CLOUD_CONFIG_URI: https://config-server-test.system.cf.hob.local
     SPRING_CONFIG_IMPORT: optional:configserver:https://config-server-test.system.cf.hob.local
-    SPRING_PROFILES_ACTIVE: backup-notification-service,credhub,backend-kafka
+    SPRING_PROFILES_ACTIVE: backup-notification-service,credhub,backend-kafka,backend-redis
   instances: 1
   memory: 1G
   routes:
